[gd_scene load_steps=13 format=3 uid="uid://mevclvfrtamu"]

[ext_resource type="Texture2D" uid="uid://byniti6pnevj7" path="res://Assets/Gemini_Generated_Image_j8h1kjj8h1kjj8h1.png" id="1_c2fhx"]
[ext_resource type="Script" uid="uid://b0puwtkunyhj2" path="res://Scripts/ui/main_menu.gd" id="1_sn23y"]
[ext_resource type="FontFile" uid="uid://vb0nfsmylelc" path="res://Assets/Super Meatball.ttf" id="2_e23ap"]
[ext_resource type="Script" uid="uid://etqfwk4877a8" path="res://Scripts/ui/setting.gd" id="4_baxwh"]
[ext_resource type="Script" uid="uid://bxsmvcmve5gc4" path="res://Scripts/audio_control.gd" id="5_0js1b"]
[ext_resource type="AudioStream" uid="uid://c8lfqu2njvjsx" path="res://Audio/backsound.wav" id="5_1u1h3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e23ap"]
texture = ExtResource("1_c2fhx")
modulate_color = Color(0.556953, 0.556953, 0.556953, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sd7iy"]
bg_color = Color(0.6784314, 0.5568628, 0.38039216, 0.94509804)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_baxwh"]
bg_color = Color(0.29411766, 0.43137255, 0.23921569, 0.94509804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1u1h3"]
bg_color = Color(0.6784314, 0.5568628, 0.38039216, 0.94509804)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_0js1b"]
color = Color(0.9261191, 0.8593104, 0.7660933, 0.94509804)
thickness = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_iug37"]
color = Color(0.6784314, 0.5568628, 0.38039216, 0.94509804)
thickness = 10

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sn23y")

[node name="Background" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_e23ap")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -79.5
offset_right = 176.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="Button" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 6
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_sd7iy")
text = "START"

[node name="Button2" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 6
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_sd7iy")
text = "SETTING"

[node name="Button3" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 6
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_sd7iy")
text = "EXIT"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -229.0
offset_right = 217.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_e23ap")
theme_override_font_sizes/font_size = 101
text = "RAGUNAN ZOO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1u1h3")
autoplay = true
bus = &"Music"

[node name="Setting" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -215.0
offset_right = 287.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_baxwh")
script = ExtResource("4_baxwh")

[node name="Label" type="Label" parent="Setting"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_e23ap")
theme_override_font_sizes/font_size = 70
text = "SETTING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Setting"]
layout_mode = 0
offset_left = 192.0
offset_top = 397.0
offset_right = 369.0
offset_bottom = 465.0
theme_override_fonts/font = ExtResource("2_e23ap")
theme_override_font_sizes/font_size = 44
theme_override_styles/normal = SubResource("StyleBoxFlat_1u1h3")
text = "CLOSE"

[node name="AudioControl" type="HSlider" parent="Setting"]
layout_mode = 0
offset_left = 191.0
offset_top = 149.0
offset_right = 538.0
offset_bottom = 224.0
theme_override_styles/slider = SubResource("StyleBoxLine_0js1b")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_iug37")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_iug37")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_0js1b")
audio_bus_name = "Music"

[node name="music" type="Label" parent="Setting"]
layout_mode = 0
offset_left = 61.0
offset_top = 163.0
offset_right = 161.0
offset_bottom = 209.0
theme_override_fonts/font = ExtResource("2_e23ap")
theme_override_font_sizes/font_size = 36
text = "Music"

[connection signal="pressed" from="MainButtons/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Button2" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="MainButtons/Button3" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Setting/Button" to="." method="_on_close_pressed"]
[connection signal="value_changed" from="Setting/AudioControl" to="Setting/AudioControl" method="_on_value_changed"]
